# template

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml  output.json  test.json  test.yaml
.github/workflows/: build.yml
assets/: README.md  juventus.csv
src/: lib.rs  main.rs  opts.rs  process.rs
src/process/: csv_convert.rs  gen_pass.rs  mod.rs
