[package]
name = "template"
version = "0.1.0"
authors = ["Seven Cheng <chengzw@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.198", features = ["derive"] }
